apps/gocd/gocd-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gocd-app
  namespace: homelab
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gocd.localhost`)
      priority: 10
      services:
        - name: gocd-app-server  
          port: 8153
    - kind: Rule
      match: Host(`gocd.localhost`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: gocd-app-server  
          port: 8153
          scheme: h2c
  tls:
    certResolver: default
